--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
 						<td>Уровень доступа 1</td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button class="btn_edit">
+								<button type="button" class="btn_edit" data-toggle="modal" data-target="#modal-edit">
 									<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M14.25 9.03466C13.8352 9.03466 13.5 9.3707 13.5 9.78461V15.7847C13.5 16.1979 13.164 16.5346 12.75 16.5346H2.25C1.83595 16.5346 1.50005 16.1979 1.50005 15.7847V5.28461C1.50005 4.87138 1.83595 4.53465 2.25 4.53465H8.25005C8.66478 4.53465 9 4.19861 9 3.7847C9 3.37065 8.66478 3.03461 8.25005 3.03461H2.25C1.00951 3.03461 0 4.04411 0 5.28461V15.7847C0 17.0252 1.00951 18.0347 2.25 18.0347H12.75C13.9905 18.0347 15 17.0252 15 15.7847V9.78461C15 9.36988 14.6647 9.03466 14.25 9.03466Z" fill="#007BFF"/>
 										<path d="M7.03228 8.35135C6.97982 8.40381 6.94453 8.47055 6.92956 8.54251L6.39933 11.1946C6.37461 11.3175 6.41361 11.4443 6.50205 11.5335C6.57332 11.6048 6.66932 11.643 6.76765 11.643C6.79154 11.643 6.8164 11.6408 6.84112 11.6356L9.49239 11.1053C9.56586 11.0902 9.63261 11.0551 9.68438 11.0025L15.6184 5.0685L12.9671 2.41736L7.03228 8.35135Z" fill="#007BFF"/>
 										<path d="M17.4511 0.583569C16.72 -0.147709 15.5304 -0.147709 14.7998 0.583569L13.7619 1.6215L16.4132 4.27278L17.4511 3.23471C17.8051 2.8815 18.0002 2.41046 18.0002 1.90948C18.0002 1.4085 17.8051 0.937466 17.4511 0.583569Z" fill="#007BFF"/>
 									</svg>
 								</button>
-								<button class="btn_delete ml-4">
+								<button type="button" class="btn_delete ml-4" data-toggle="modal" data-target="#modal-delete">
 									<svg width="16" height="18" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M13.9062 2.25H10.8125V1.6875C10.8125 0.755508 10.057 0 9.125 0H6.875C5.94301 0 5.1875 0.755508 5.1875 1.6875V2.25H2.09375C1.31711 2.25 0.6875 2.87961 0.6875 3.65625V4.78125C0.6875 5.09193 0.939324 5.34375 1.25 5.34375H14.75C15.0607 5.34375 15.3125 5.09193 15.3125 4.78125V3.65625C15.3125 2.87961 14.6829 2.25 13.9062 2.25ZM6.3125 1.6875C6.3125 1.37742 6.56492 1.125 6.875 1.125H9.125C9.43508 1.125 9.6875 1.37742 9.6875 1.6875V2.25H6.3125V1.6875Z" fill="#007BFF"/>
 										<path d="M1.75494 6.46875C1.65457 6.46875 1.57459 6.55263 1.57937 6.6529L2.04343 16.3927C2.08632 17.2941 2.82671 18 3.72882 18H12.2711C13.1732 18 13.9136 17.2941 13.9565 16.3927L14.4205 6.6529C14.4253 6.55263 14.3453 6.46875 14.245 6.46875H1.75494ZM10.25 7.875C10.25 7.56422 10.5017 7.3125 10.8125 7.3125C11.1232 7.3125 11.375 7.56422 11.375 7.875V15.1875C11.375 15.4983 11.1232 15.75 10.8125 15.75C10.5017 15.75 10.25 15.4983 10.25 15.1875V7.875ZM7.43745 7.875C7.43745 7.56422 7.68917 7.3125 7.99995 7.3125C8.31073 7.3125 8.56245 7.56422 8.56245 7.875V15.1875C8.56245 15.4983 8.31073 15.75 7.99995 15.75C7.68917 15.75 7.43745 15.4983 7.43745 15.1875V7.875ZM4.62495 7.875C4.62495 7.56422 4.87667 7.3125 5.18745 7.3125C5.49823 7.3125 5.74995 7.56422 5.74995 7.875V15.1875C5.74995 15.4983 5.49823 15.75 5.18745 15.75C4.87667 15.75 4.62495 15.4983 4.62495 15.1875V7.875Z" fill="#007BFF"/>
@@ -447,6 +447,30 @@
 	<section class="mobile-screensaver">
 		<p>Зайдите с устройства с большим экраном</p>
 	</section>
+
+	<!-- Modal -->
+	<div class="modal fade" id="modal-edit" tabindex="-1" role="dialog" aria-labelledby="modal-edit" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="m-head">
+					<h2>Редактировать</h2>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<svg viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M7.08575 8.5L0.292847 15.2929L1.70706 16.7071L8.49997 9.91421L15.2929 16.7071L16.7071 15.2929L9.91418 8.5L16.7071 1.70712L15.2928 0.292908L8.49997 7.08579L1.70709 0.292908L0.292876 1.70712L7.08575 8.5Z" fill="black"/>
+						</svg>
+					</button>
+				</div>
+				<div class="m-body">
+					<form action="" class="f_09">
+						<div class="fw_5 mb-1">ФИО</div>
+						<input type="text" placeholder="ФИО" class="mb-2">
+						<div class="fw_5 mb-1">Почта</div>
+						<input type="text" placeholder="Почта" class="mb-2">
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Skripts -->
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
