--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 					</svg>
 					<span class="fw_5 ml-2">На сайт</span>
 				</a>
-				<button class="header-btn ml-4 ml-xl-5">
+				<a href="entrance.html" class="header-btn ml-4 ml-xl-5">
 					<svg width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M13.8214 3.6L12.5614 4.86L14.9014 7.2H10.3114H5.72135V9H10.3114H12.6064H14.9014L12.5614 11.34L13.8214 12.6L18.3214 8.1L13.8214 3.6ZM2.12135 14.4H9.32135V16.2H2.12135C1.13135 16.2 0.32135 15.39 0.32135 14.4V1.8C0.32135 0.81 1.13135 0 2.12135 0H9.32135V1.8H2.12135V14.4Z"/>
 					</svg>
 					<span class="fw_5 ml-2">Выйти</span>
-				</button>
+				</a>
 			</div>
 		</div>
 	</header>
