--- a/callbacks.html
+++ b/callbacks.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Бизнес my life - административная панель</title>
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
@@ -295,10 +295,6 @@
 		<!-- первой и последней стрелке нужно добавлять класс link-disabled в зависимости от того, до какой страницы добрался пользователь -->
 		
 	</main>
-
-	<section class="mobile-screensaver">
-		<p>Зайдите с устройства с большим экраном</p>
-	</section>
 
 	<!-- Modals -->
 
