--- a/partners.html
+++ b/partners.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Бизнес my life - административная панель</title>
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
@@ -391,10 +391,6 @@
 			<div class="f_09">Показаны записи 1-9 из 45.</div>
 		</div>
 	</main>
-
-	<section class="mobile-screensaver">
-		<p>Зайдите с устройства с большим экраном</p>
-	</section>
 
 	<!-- Modals -->
 	<div class="modal fade" id="modal-add-partner" tabindex="-1" role="dialog" aria-hidden="true">
