--- a/entrance.html
+++ b/entrance.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Бизнес my life - Вход в административную панель</title>
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
